--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=wp_dashboard
+DB_USERNAME=root    
+DB_PASSWORD=Javelin1993@batna
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
