--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,6 +2,9 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
+    <IfModule LiteSpeed>
+        CacheLookup on
+    </IfModule>
 
     RewriteEngine On
 
